// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/system_users/list should match default snapshot 1`] = `
<div>
  <SearchableUserList
    actionProps={
      Object {
        "doEmailReset": [Function],
        "doManageRoles": [Function],
        "doManageTeams": [Function],
        "doManageTokens": [Function],
        "doPasswordReset": [Function],
        "enableUserAccessTokens": false,
        "experimentalEnableAuthenticationTransfer": false,
        "mfaEnabled": false,
      }
    }
    actionUserProps={Object {}}
    actions={
      Array [
        [Function],
      ]
    }
    enableUserAccessTokens={false}
    experimentalEnableAuthenticationTransfer={false}
    extraInfo={Object {}}
    filter=""
    focusOnMount={false}
    mfaEnabled={false}
    nextPage={[Function]}
    onTermChange={[MockFunction]}
    page={0}
    previousPage={[Function]}
    renderCount={[Function]}
    renderFilterRow={[MockFunction]}
    rowComponentType={[Function]}
    search={[Function]}
    showTeamToggle={false}
    teamId=""
    term=""
    total={0}
    users={Array []}
    usersPerPage={0}
  />
  <Connect(ManageTeamsModal)
    onModalDismissed={[Function]}
    show={false}
    user={null}
  />
  <Connect(ManageRolesModal)
    onModalDismissed={[Function]}
    show={false}
    user={null}
  />
  <Connect(ManageTokensModal)
    onModalDismissed={[Function]}
    show={false}
    user={null}
  />
  <Connect(ResetPasswordModal)
    onModalDismissed={[Function]}
    onModalSubmit={[Function]}
    show={false}
    user={null}
  />
  <ResetEmailModal
    onModalDismissed={[Function]}
    onModalSubmit={[Function]}
    show={false}
    user={null}
  />
</div>
`;

exports[`components/admin_console/system_users/list should match default snapshot, with users and mfa disabled 1`] = `
<div>
  <SearchableUserList
    actionProps={
      Object {
        "doEmailReset": [Function],
        "doManageRoles": [Function],
        "doManageTeams": [Function],
        "doManageTokens": [Function],
        "doPasswordReset": [Function],
        "enableUserAccessTokens": false,
        "experimentalEnableAuthenticationTransfer": false,
        "mfaEnabled": false,
      }
    }
    actionUserProps={Object {}}
    actions={
      Array [
        [Function],
      ]
    }
    enableUserAccessTokens={false}
    experimentalEnableAuthenticationTransfer={false}
    extraInfo={
      Object {
        "id1": Array [
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**Sign-in Method:** Email"
            id="admin.user_item.authServiceEmail"
          />,
        ],
        "id2": Array [
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**Sign-in Method:** Email"
            id="admin.user_item.authServiceEmail"
          />,
        ],
        "id3": Array [
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**Sign-in Method:** {service}"
            id="admin.user_item.authServiceNotEmail"
            values={
              Object {
                "service": "LDAP",
              }
            }
          />,
        ],
        "id4": Array [
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**Sign-in Method:** {service}"
            id="admin.user_item.authServiceNotEmail"
            values={
              Object {
                "service": "SAML",
              }
            }
          />,
        ],
        "id5": Array [
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**Sign-in Method:** {service}"
            id="admin.user_item.authServiceNotEmail"
            values={
              Object {
                "service": "Other Service",
              }
            }
          />,
        ],
      }
    }
    filter=""
    focusOnMount={false}
    mfaEnabled={false}
    nextPage={[Function]}
    onTermChange={[MockFunction]}
    page={0}
    previousPage={[Function]}
    renderCount={[Function]}
    renderFilterRow={[MockFunction]}
    rowComponentType={[Function]}
    search={[Function]}
    showTeamToggle={false}
    teamId=""
    term=""
    total={0}
    users={
      Array [
        Object {
          "id": "id1",
        },
        Object {
          "id": "id2",
        },
        Object {
          "auth_service": "ldap",
          "id": "id3",
        },
        Object {
          "auth_service": "saml",
          "id": "id4",
        },
        Object {
          "auth_service": "other service",
          "id": "id5",
        },
      ]
    }
    usersPerPage={0}
  />
  <Connect(ManageTeamsModal)
    onModalDismissed={[Function]}
    show={false}
    user={null}
  />
  <Connect(ManageRolesModal)
    onModalDismissed={[Function]}
    show={false}
    user={null}
  />
  <Connect(ManageTokensModal)
    onModalDismissed={[Function]}
    show={false}
    user={null}
  />
  <Connect(ResetPasswordModal)
    onModalDismissed={[Function]}
    onModalSubmit={[Function]}
    show={false}
    user={null}
  />
  <ResetEmailModal
    onModalDismissed={[Function]}
    onModalSubmit={[Function]}
    show={false}
    user={null}
  />
</div>
`;

exports[`components/admin_console/system_users/list should match default snapshot, with users and mfa enabled 1`] = `
<div>
  <SearchableUserList
    actionProps={
      Object {
        "doEmailReset": [Function],
        "doManageRoles": [Function],
        "doManageTeams": [Function],
        "doManageTokens": [Function],
        "doPasswordReset": [Function],
        "enableUserAccessTokens": false,
        "experimentalEnableAuthenticationTransfer": false,
        "mfaEnabled": true,
      }
    }
    actionUserProps={Object {}}
    actions={
      Array [
        [Function],
      ]
    }
    enableUserAccessTokens={false}
    experimentalEnableAuthenticationTransfer={false}
    extraInfo={
      Object {
        "id1": Array [
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**Sign-in Method:** Email"
            id="admin.user_item.authServiceEmail"
          />,
          ", ",
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**MFA**: No"
            id="admin.user_item.mfaNo"
          />,
        ],
        "id2": Array [
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**Sign-in Method:** Email"
            id="admin.user_item.authServiceEmail"
          />,
          ", ",
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**MFA**: No"
            id="admin.user_item.mfaNo"
          />,
        ],
        "id3": Array [
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**Sign-in Method:** {service}"
            id="admin.user_item.authServiceNotEmail"
            values={
              Object {
                "service": "LDAP",
              }
            }
          />,
          ", ",
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**MFA**: No"
            id="admin.user_item.mfaNo"
          />,
        ],
        "id4": Array [
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**Sign-in Method:** {service}"
            id="admin.user_item.authServiceNotEmail"
            values={
              Object {
                "service": "SAML",
              }
            }
          />,
          ", ",
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**MFA**: No"
            id="admin.user_item.mfaNo"
          />,
        ],
        "id5": Array [
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**Sign-in Method:** {service}"
            id="admin.user_item.authServiceNotEmail"
            values={
              Object {
                "service": "Other Service",
              }
            }
          />,
          ", ",
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="**MFA**: No"
            id="admin.user_item.mfaNo"
          />,
        ],
      }
    }
    filter=""
    focusOnMount={false}
    mfaEnabled={true}
    nextPage={[Function]}
    onTermChange={[MockFunction]}
    page={0}
    previousPage={[Function]}
    renderCount={[Function]}
    renderFilterRow={[MockFunction]}
    rowComponentType={[Function]}
    search={[Function]}
    showTeamToggle={false}
    teamId=""
    term=""
    total={0}
    users={
      Array [
        Object {
          "id": "id1",
        },
        Object {
          "id": "id2",
        },
        Object {
          "auth_service": "ldap",
          "id": "id3",
        },
        Object {
          "auth_service": "saml",
          "id": "id4",
        },
        Object {
          "auth_service": "other service",
          "id": "id5",
        },
      ]
    }
    usersPerPage={0}
  />
  <Connect(ManageTeamsModal)
    onModalDismissed={[Function]}
    show={false}
    user={null}
  />
  <Connect(ManageRolesModal)
    onModalDismissed={[Function]}
    show={false}
    user={null}
  />
  <Connect(ManageTokensModal)
    onModalDismissed={[Function]}
    show={false}
    user={null}
  />
  <Connect(ResetPasswordModal)
    onModalDismissed={[Function]}
    onModalSubmit={[Function]}
    show={false}
    user={null}
  />
  <ResetEmailModal
    onModalDismissed={[Function]}
    onModalSubmit={[Function]}
    show={false}
    user={null}
  />
</div>
`;
